--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: StructR
 Type: Package
 Title: Structural geology tools
-Version: 1.0
-Date: 2011-12-20
+Version: 1.1
+Date: 2012-03-29
 Author: Jeffrey R. Webber
 Maintainer: Jeffrey R. Webber <jrwebber@uvm.edu>
-Depends: R (>= 2.12.1), png, rgl, misc3d, RFOC
-Description: Set of functions for the conversion, computation, and visualization of geological data. This package also includes a set of functions for use within a 3D Fry method teaching tutorial.
+Depends: R (>= 2.12.1), rgl, misc3d
+Imports: png, RFOC
+Description: Set of functions for the conversion, computation, and
+        visualization of geological data.
 License: GPL
 LazyLoad: yes
-Packaged: 2011-12-22 21:00:46 UTC; Jeffrey R. Webber
+Packaged: 2012-03-30 17:32:40 UTC; Jeffrey R. Webber
 Repository: CRAN
-Date/Publication: 2011-12-23 05:54:29
+Date/Publication: 2012-03-31 05:19:54
